Update the endpoints for the CRUDs.
