# src/main/java/com/ronvel/farztev/admin/controller/dto/ListArticle.java
@@ -1,15 +1,16 @@
 package com.ronvel.farztev.admin.controller.dto;
 
-import java.util.Date;
 import java.util.Objects;
-
 import com.fasterxml.jackson.annotation.JsonProperty;
-
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
+import org.joda.time.LocalDate;
+import javax.validation.constraints.*;
 /**
  * ListArticle
  */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-09-11T22:47:11.093+02:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-11-11T19:02:46.574+01:00")
 
 public class ListArticle   {
   @JsonProperty("id")
@@ -25,10 +26,19 @@ public class ListArticle   {
   private String photo = null;
 
   @JsonProperty("created")
-  private Date created = null;
+  private LocalDate created = null;
 
   @JsonProperty("updated")
-  private Date updated = null;
+  private LocalDate updated = null;
+
+  @JsonProperty("countryId")
+  private Long countryId = null;
+
+  @JsonProperty("countryName")
+  private String countryName = null;
+
+  @JsonProperty("online")
+  private Boolean online = null;
 
   public ListArticle id(Long id) {
     this.id = id;
@@ -39,7 +49,7 @@ public class ListArticle   {
    * Get id
    * @return id
   **/
-  @ApiModelProperty(value = "")
+  @ApiModelProperty(example = "1", value = "")
   public Long getId() {
     return id;
   }
@@ -102,7 +112,7 @@ public class ListArticle   {
     this.photo = photo;
   }
 
-  public ListArticle created(Date created) {
+  public ListArticle created(LocalDate created) {
     this.created = created;
     return this;
   }
@@ -112,15 +122,15 @@ public class ListArticle   {
    * @return created
   **/
   @ApiModelProperty(example = "Blablabla", value = "")
-  public Date getCreated() {
+  public LocalDate getCreated() {
     return created;
   }
 
-  public void setCreated(Date created) {
+  public void setCreated(LocalDate created) {
     this.created = created;
   }
 
-  public ListArticle updated(Date updated) {
+  public ListArticle updated(LocalDate updated) {
     this.updated = updated;
     return this;
   }
@@ -130,12 +140,66 @@ public class ListArticle   {
    * @return updated
   **/
   @ApiModelProperty(example = "Blablabla", value = "")
-  public Date getUpdated() {
+  public LocalDate getUpdated() {
     return updated;
   }
 
-  public void setUpdated(Date updated) {
+  public void setUpdated(LocalDate updated) {
     this.updated = updated;
+  }
+
+  public ListArticle countryId(Long countryId) {
+    this.countryId = countryId;
+    return this;
+  }
+
+   /**
+   * Get countryId
+   * @return countryId
+  **/
+  @ApiModelProperty(example = "1", value = "")
+  public Long getCountryId() {
+    return countryId;
+  }
+
+  public void setCountryId(Long countryId) {
+    this.countryId = countryId;
+  }
+
+  public ListArticle countryName(String countryName) {
+    this.countryName = countryName;
+    return this;
+  }
+
+   /**
+   * Get countryName
+   * @return countryName
+  **/
+  @ApiModelProperty(example = "Ireland", value = "")
+  public String getCountryName() {
+    return countryName;
+  }
+
+  public void setCountryName(String countryName) {
+    this.countryName = countryName;
+  }
+
+  public ListArticle online(Boolean online) {
+    this.online = online;
+    return this;
+  }
+
+   /**
+   * Get online
+   * @return online
+  **/
+  @ApiModelProperty(example = "true", value = "")
+  public Boolean getOnline() {
+    return online;
+  }
+
+  public void setOnline(Boolean online) {
+    this.online = online;
   }
 
 
@@ -153,12 +217,15 @@ public class ListArticle   {
         Objects.equals(this.name, listArticle.name) &&
         Objects.equals(this.photo, listArticle.photo) &&
         Objects.equals(this.created, listArticle.created) &&
-        Objects.equals(this.updated, listArticle.updated);
+        Objects.equals(this.updated, listArticle.updated) &&
+        Objects.equals(this.countryId, listArticle.countryId) &&
+        Objects.equals(this.countryName, listArticle.countryName) &&
+        Objects.equals(this.online, listArticle.online);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(id, country, name, photo, created, updated);
+    return Objects.hash(id, country, name, photo, created, updated, countryId, countryName, online);
   }
 
   @Override
@@ -172,6 +239,9 @@ public class ListArticle   {
     sb.append("    photo: ").append(toIndentedString(photo)).append("\n");
     sb.append("    created: ").append(toIndentedString(created)).append("\n");
     sb.append("    updated: ").append(toIndentedString(updated)).append("\n");
+    sb.append("    countryId: ").append(toIndentedString(countryId)).append("\n");
+    sb.append("    countryName: ").append(toIndentedString(countryName)).append("\n");
+    sb.append("    online: ").append(toIndentedString(online)).append("\n");
     sb.append("}");
     return sb.toString();
   }
