# src/main/resources/swagger.yml
@@ -1,17 +1,45 @@
-swagger: "2.0"
+swagger: '2.0'
 info:
+  title: Farztev admin API
+  description: Manage Farztev
   version: "1.0.0"
-  title: "Farztev admin"
-  contact:
-    email: "mathieu@ronvel.com"
-  license:
-    name: "Apache 2.0"
-    url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-tags:
+host: localhost
 schemes:
-- "http"
+  - https
+basePath: /
+produces:
+  - application/json
+parameters:
+  CountryId:
+    name: countryId
+    in: path
+    type: integer
+    format: int64
+    description: Country ID
+    required: true
+  Country:
+    name: country
+    in: body
+    description: Country data.
+    required: true
+    schema:
+      $ref: '#/definitions/Country'
+  ArticleId:
+    name: articleId
+    in: path
+    type: integer
+    format: int64
+    description: Article ID
+    required: true
+  Article:
+    name: article
+    in: body
+    description: Article data.
+    required: true
+    schema:
+      $ref: '#/definitions/Article'
 paths:
-  /articles:
+  /api/articles:
     get:
       produces:
       - "application/json"
@@ -24,17 +52,24 @@ paths:
               $ref: "#/definitions/ListArticle"
         400:
           description: "Invalid status value"
-  /articles/{articleId}:
+    post:
+      produces:
+      - "application/json"
+      parameters:
+        - $ref: '#/parameters/Article'
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Article"
+        400:
+          description: "Invalid status value"
+  /api/articles/{articleId}:
     get:
       produces:
       - "application/json"
       parameters:
-      - name: "articleId"
-        in: "path"
-        description: "ID of the article to return"
-        required: true
-        type: "integer"
-        format: "int64"
+        - $ref: '#/parameters/ArticleId'
       responses:
         200:
           description: "successful operation"
@@ -42,7 +77,30 @@ paths:
             $ref: "#/definitions/Article"
         404:
           description: "Article not found"
-  /countries:
+    put:
+      produces:
+      - "application/json"
+      parameters:
+        - $ref: '#/parameters/ArticleId'
+        - $ref: '#/parameters/Article'
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Article"
+        400:
+          description: "Invalid status value"
+    delete:
+      produces:
+      - "application/json"
+      parameters:
+        - $ref: '#/parameters/ArticleId'
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "Invalid status value"
+  /api/countries:
     get:
       produces:
       - "application/json"
@@ -55,17 +113,24 @@ paths:
               $ref: "#/definitions/ListCountry"
       400:
         description: "Invalid status value"
-  /countries/{countryId}:
+    post:
+      produces:
+      - "application/json"
+      parameters:
+        - $ref: '#/parameters/Country'
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Country"
+        400:
+          description: "Invalid status value"
+  /api/countries/{countryId}:
     get:
       produces:
       - "application/json"
       parameters:
-      - name: "countryId"
-        in: "path"
-        description: "ID of the country to return"
-        required: true
-        type: "integer"
-        format: "int64"
+        - $ref: '#/parameters/CountryId'
       responses:
         200:
           description: "successful operation"
@@ -73,6 +138,29 @@ paths:
             $ref: "#/definitions/Country"
         404:
           description: "Country not found"
+    put:
+      produces:
+      - "application/json"
+      parameters:
+        - $ref: '#/parameters/CountryId'
+        - $ref: '#/parameters/Country'
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Country"
+        400:
+          description: "Invalid status value"
+    delete:
+      produces:
+      - "application/json"
+      parameters:
+        - $ref: '#/parameters/CountryId'
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "Invalid status value"
 definitions:
   ListArticle:
     type: "object"
@@ -80,6 +168,7 @@ definitions:
       id:
         type: "integer"
         format: "int64"
+        example: 1
       country:
         type: "string"
         example: "fr"
@@ -97,6 +186,16 @@ definitions:
         type: "string"
         format: "date"
         example: "Blablabla"
+      countryId:
+        type: "integer"
+        format: "int64"
+        example: 1
+      countryName:
+        type: "string"
+        example: Ireland
+      online:
+        type: "boolean"
+        example: true
   Article:
     type: "object"
     properties:
@@ -123,6 +222,9 @@ definitions:
         type: "string"
         format: "date"
         example: "Blablabla"
+      online:
+        type: "boolean"
+        example: true
   ListCountry:
     type: "object"
     properties:
